--- a/yardiWeb/WebContent/yardiLogin.html
+++ b/yardiWeb/WebContent/yardiLogin.html
@@ -19,7 +19,9 @@
 <body>
   <script src="resources/scripts/jquery-2.2.4.min.js"></script>
   <script src="resources/scripts/bootstrap.min.js"></script>
+  <!--
   <img  class="bg" alt="" src="resources/img/yardi_banner.jpg">
+  -->
   <div class="container">
     <div class="main">
       <form class="form-horizontal" role="form">
@@ -49,7 +51,7 @@
           </div>
         </div>          
       </form>
-      <div font color="red" id="form-feedback"></div>
+      <div style="color:red;" id="form-feedback"></div>
     </div>
   </div>
   <script>
