--- a/userProfile_CRUD.html
+++ b/userProfile_CRUD.html
@@ -322,7 +322,7 @@
       setFormData();
       doPost();
       clearScreen();
-      configureButtons(false, true, true, true, true, true;
+      configureButtons(false, true, true, true, true, true);
       configureViewMode();
     });
     
