--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -9,6 +9,7 @@
   <script>
     var doc; //global reference to the the iframe contentWindow
     var frameLoaded = false;
+    var initialPageList;    //list of initial pages for each group the user is a member of
     var frame = 'yardiLogin.html';
     $(function() {
       nextFrame();
