Store the user name in WEBCONTENT\index.html
Pages that need to display user name will set the text of #title-loginID to parent.userName

Delete calls to getSessionInfo and the function getSessionInfo

Servlet SRC\COM\YARDI\USERSERVICES\SessionInfoService is not needed

Entities now reference the schema="DB2ADMIN" on the @Table annotation

***HTML***
WEBCONTENT\
index.html
yardiLogin.html
WEBCONTENT\
VIEWS\
groupMaster_CRUD.html
groupPermissions_CRUD.html
passwordPolicy_CRUD.html
permissionsMaster_CRUD.html
QSECOFR_Main.html
selectGroup.html
sessions_CRUD.html
uniqueTokens_CRUD.html
userGroups_CRUD.html
userProfile_CRUD.html

***Entities***
EJBMODULE\
COM\YARDI\EJB\
Group_Permissions.java
Groups_Master.java
Permissions_Master.java
Pp_Pwd_Policy.java
Sessions_Table.java
Unique_Tokens.java
User_Groups.java
User_Profile.java

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,6 +11,7 @@
     var frameLoaded = false;
     var initialPageList;    //list of initial pages for each group the user is a member of
     var frame = 'yardiLogin.html';
+    var userName = ' ';
     $(function() {
       nextFrame();
     });
