--- a/WebContent/yardiLogin.html
+++ b/WebContent/yardiLogin.html
@@ -148,6 +148,7 @@
                   parent.initialPageList = data.newPassword;
                 } 
 
+                parent.userName = data.userName;
                 $('html').html(data.msgDescription);
                 console.log('nextFrame ' + data.msgDescription);
                 parent.frame = data.msgDescription;
